@@ -5,6 +5,7 @@
 	  the pipe to signal the child to quit (even if the write does not
 	  come through, the closed pipe will cause the child to quit).
 	- need_to_send_STATS flag in parent. 
+	- reload has its own ipc-listening handler in server_main.
 
 24 May 2006: Wouter
 	- unit tests print progress while running to stderr. Included license
